// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-data-list__cell"
  >
    Secondary
  </div>
</DocumentFragment>
`;

exports[`Cells renders to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-data-list__item-content"
  >
    <div
      class="pf-v5-c-data-list__cell data-list-custom"
      id="primary-item"
    >
      Primary Id
    </div>
    <div
      class="pf-v5-c-data-list__cell data-list-custom"
      id="primary-item"
    >
      Primary Id 2
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataListAction renders to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-data-list__item-action"
  >
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-primary"
      data-ouia-component-id="OUIA-Generated-Button-primary-1"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      id="delete-item-1"
      type="button"
    >
      Delete
    </button>
  </div>
</DocumentFragment>
`;

exports[`DataListContent renders to match snapshot 1`] = `
<DocumentFragment>
  <section
    aria-label="Primary Content Details"
    class="pf-v5-c-data-list__expandable-content"
    id=""
  >
    <div
      class="pf-v5-c-data-list__expandable-content-body"
    >
       test
    </div>
  </section>
</DocumentFragment>
`;

exports[`Item renders to match snapshot 1`] = `
<DocumentFragment>
  <li
    aria-labelledby="item-1"
    class="pf-v5-c-data-list__item"
    id=""
  />
</DocumentFragment>
`;

exports[`Item row renders to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-data-list__item-row"
  />
</DocumentFragment>
`;

exports[`Renders to match snapshot 1`] = `
<DocumentFragment>
  <ul
    aria-label="list"
    class="pf-v5-c-data-list pf-m-grid-md"
    role="list"
  />
</DocumentFragment>
`;
